feat(auth): reset password with phone verification
